# Copyright © 2018 Po Huit
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "cmdline"
version = "0.1.0"
authors = ["Po Huit <eve.po.huit@gmail.com>"]

[dependencies]
plan_b = {path = "../plan_b"}
noisy_float = "0.1.7"
rand = "0.3"
sqlite3 = "0.24.0"


[[bin]]
name = "plan-b"
path = "src/main.rs"
